footer alignmentissues solved

--- a/src/app/component/app-footer/app-footer.component.scss
+++ b/src/app/component/app-footer/app-footer.component.scss
@@ -9,6 +9,14 @@
     min-height: 80px;
   }
 }
+.text-style {
+  margin-bottom: 6px !important;
+}
+.policy-text-style {
+  font-weight: bold;
+  font-size: 14px !important;
+  color: #FFFFFF !important;
+}
 .policy {
   color: white !important;
   font-weight: bold !important;
